# process_visualisation

./: CMakeLists.txt  INSTALL.md  data_structs.cpp  data_structs.h  groupwindows.cpp  main.cpp  mainwindow.cpp  mainwindow.h  process_analyser.py
cmake/: FindPoco.cmake
cmake/control/: postinst
cmake/macros/: SystemSpecificInformations.cmake
forms/: mainwindow.ui  plot-examples.pro
python/: process_analyser.py
src/: data_structs.cpp  data_structs.h  groupwindows.cpp  groupwindows.h  main.cpp  mainwindow.cpp  mainwindow.h  qcustomplot.cpp  qcustomplot.h  remotedatafeeder.cpp  remotedatafeeder.h  zhelpers.h
